feat: add Twitch notifications and database integration
- Updated config.json to include announcements channel.
- Implemented database connection using Prisma with PostgreSQL adapter.
- Created Twitch notification plugin to monitor stream status and send alerts.
- Enhanced welcome message for new guild members.
- Established database connection on bot ready event.
- Added Prisma schema and initial migration for database tables.
- Updated package.json with new dependencies for Prisma and Twurple.

--- a/core/assets/config.json
+++ b/core/assets/config.json
@@ -40,7 +40,8 @@
         },
         "channel": {
             "welcome": "1464134865292230719",
-            "logs": "1464135104589987938"
+            "logs": "1464135104589987938",
+            "announcements": ""
         },
         "category": {}
     },
