--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@prisma/adapter-pg": "^7.3.0",
+    "@prisma/client": "^7.3.0",
+    "@twurple/api": "^8.0.3",
+    "@twurple/auth": "^8.0.3",
+    "@twurple/eventsub-http": "^8.0.3",
+    "@twurple/eventsub-ngrok": "^8.0.3",
     "colors": "^1.4.0",
+    "crypto": "^1.0.1",
     "discord.js": "^14.25.1",
     "dotenv": "^17.2.3",
-    "mongoose": "^9.1.5"
+    "mongoose": "^9.1.5",
+    "prisma": "^7.3.0"
   }
 }
