--- a/core/assets/config.json
+++ b/core/assets/config.json
@@ -41,7 +41,7 @@
         "channel": {
             "welcome": "1464134865292230719",
             "logs": "1464135104589987938",
-            "announcements": ""
+            "announcements": "1464149921971044455"
         },
         "category": {}
     },
