--- a/core/assets/config.json
+++ b/core/assets/config.json
@@ -36,12 +36,14 @@
         "id": "1460817277275340860",
         "role": {
             "wachito": "1464125720925175854",
-            "bot": "1464127369869660161"
+            "bot": "1464127369869660161",
+            "booster": "1465200118415233201"
         },
         "channel": {
             "welcome": "1464134865292230719",
             "logs": "1464135104589987938",
-            "announcements": "1464149921971044455"
+            "announcements": "1464149921971044455",
+            "boost": "1465198276213997695"
         },
         "category": {}
     },
