--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "type": "module",
   "private": true,
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bluebird": "^3.5.42",
+    "@types/bun": "latest",
+    "@types/lodash": "^4.17.23",
+    "@types/request-promise": "^4.1.51"
   },
   "peerDependencies": {
     "typescript": "^5"
@@ -16,12 +19,16 @@
     "@twurple/auth": "^8.0.3",
     "@twurple/eventsub-http": "^8.0.3",
     "@twurple/eventsub-ngrok": "^8.0.3",
+    "bluebird": "^3.7.2",
     "colors": "^1.4.0",
     "crypto": "^1.0.1",
     "discord.js": "^14.25.1",
     "dotenv": "^17.2.3",
+    "lodash": "^4.17.23",
     "mongoose": "^9.1.5",
     "pm2": "^6.0.14",
-    "prisma": "^7.3.0"
+    "prisma": "^7.3.0",
+    "puppeteer": "^24.36.0",
+    "request-promise": "^4.2.6"
   }
 }
