🚬 Using Biome.json

--- a/core/assets/config.json
+++ b/core/assets/config.json
@@ -1,55 +1,47 @@
 {
-    "bot": {
-        "color": "#f1c40f",
-        "intents": [
-            "AutoModerationConfiguration",
-            "AutoModerationExecution",
-            "DirectMessageReactions",
-            "DirectMessageTyping",
-            "DirectMessages",
-            "GuildBans",
-            "GuildEmojisAndStickers",
-            "GuildIntegrations",
-            "GuildInvites",
-            "GuildMembers",
-            "GuildMessageReactions",
-            "GuildMessageTyping",
-            "GuildMessages",
-            "GuildPresences",
-            "GuildScheduledEvents",
-            "GuildVoiceStates",
-            "GuildWebhooks",
-            "Guilds",
-            "MessageContent"
-        ],
-        "partials": [
-            "Channel",
-            "GuildMember",
-            "Message",
-            "Reaction",
-            "User"
-        ],
-        "footer": "https://github.com/Eze234/Free",
-        "prefix": "f!"
-    },
-    "server": {
-        "id": "1460817277275340860",
-        "role": {
-            "wachito": "1464125720925175854",
-            "bot": "1464127369869660161",
-            "booster": "1465200118415233201"
-        },
-        "channel": {
-            "welcome": "1464134865292230719",
-            "logs": "1464135104589987938",
-            "announcements": "1464149921971044455",
-            "boost": "1465198276213997695"
-        },
-        "category": {}
-    },
-    "user": {
-        "dev": [
-            "519634005226815492"
-        ]
-    }
+	"bot": {
+		"color": "#f1c40f",
+		"intents": [
+			"AutoModerationConfiguration",
+			"AutoModerationExecution",
+			"DirectMessageReactions",
+			"DirectMessageTyping",
+			"DirectMessages",
+			"GuildBans",
+			"GuildEmojisAndStickers",
+			"GuildIntegrations",
+			"GuildInvites",
+			"GuildMembers",
+			"GuildMessageReactions",
+			"GuildMessageTyping",
+			"GuildMessages",
+			"GuildPresences",
+			"GuildScheduledEvents",
+			"GuildVoiceStates",
+			"GuildWebhooks",
+			"Guilds",
+			"MessageContent"
+		],
+		"partials": ["Channel", "GuildMember", "Message", "Reaction", "User"],
+		"footer": "https://github.com/Eze234/Free",
+		"prefix": "f!"
+	},
+	"server": {
+		"id": "1460817277275340860",
+		"role": {
+			"wachito": "1464125720925175854",
+			"bot": "1464127369869660161",
+			"booster": "1465200118415233201"
+		},
+		"channel": {
+			"welcome": "1464134865292230719",
+			"logs": "1464135104589987938",
+			"announcements": "1464149921971044455",
+			"boost": "1465198276213997695"
+		},
+		"category": {}
+	},
+	"user": {
+		"dev": ["519634005226815492"]
+	}
 }
