--- a/package.json
+++ b/package.json
@@ -1,34 +1,35 @@
 {
-  "name": "free",
-  "module": "core/index.ts",
-  "type": "module",
-  "private": true,
-  "devDependencies": {
-    "@types/bluebird": "^3.5.42",
-    "@types/bun": "latest",
-    "@types/lodash": "^4.17.23",
-    "@types/request-promise": "^4.1.51"
-  },
-  "peerDependencies": {
-    "typescript": "^5"
-  },
-  "dependencies": {
-    "@prisma/adapter-pg": "^7.3.0",
-    "@prisma/client": "^7.3.0",
-    "@twurple/api": "^8.0.3",
-    "@twurple/auth": "^8.0.3",
-    "@twurple/eventsub-http": "^8.0.3",
-    "@twurple/eventsub-ngrok": "^8.0.3",
-    "bluebird": "^3.7.2",
-    "colors": "^1.4.0",
-    "crypto": "^1.0.1",
-    "discord.js": "^14.25.1",
-    "dotenv": "^17.2.3",
-    "lodash": "^4.17.23",
-    "mongoose": "^9.1.5",
-    "pm2": "^6.0.14",
-    "prisma": "^7.3.0",
-    "puppeteer": "^24.36.0",
-    "request-promise": "^4.2.6"
-  }
+	"name": "free",
+	"module": "core/index.ts",
+	"type": "module",
+	"private": true,
+	"devDependencies": {
+		"@biomejs/biome": "2.3.13",
+		"@types/bluebird": "^3.5.42",
+		"@types/bun": "latest",
+		"@types/lodash": "^4.17.23",
+		"@types/request-promise": "^4.1.51"
+	},
+	"peerDependencies": {
+		"typescript": "^5"
+	},
+	"dependencies": {
+		"@prisma/adapter-pg": "^7.3.0",
+		"@prisma/client": "^7.3.0",
+		"@twurple/api": "^8.0.3",
+		"@twurple/auth": "^8.0.3",
+		"@twurple/eventsub-http": "^8.0.3",
+		"@twurple/eventsub-ngrok": "^8.0.3",
+		"bluebird": "^3.7.2",
+		"colors": "^1.4.0",
+		"crypto": "^1.0.1",
+		"discord.js": "^14.25.1",
+		"dotenv": "^17.2.3",
+		"lodash": "^4.17.23",
+		"mongoose": "^9.1.5",
+		"pm2": "^6.0.14",
+		"prisma": "^7.3.0",
+		"puppeteer": "^24.36.0",
+		"request-promise": "^4.2.6"
+	}
 }
